--- a/css/style-games.css
+++ b/css/style-games.css
@@ -2,7 +2,7 @@
 
 body {
   min-width: 768px;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.25;
   font-family: "PT Sans", "Arial", sans-serif;
   font-weight: 400;
@@ -16,12 +16,12 @@ body {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 700;
 }
 
@@ -42,13 +42,13 @@ a {
 .main-header {
   position: relative;
   z-index: 10;
-  width: 1024px;
+  width: 768px;
   margin: auto;
   background: #0F25AE;
 }
 
 .container-page {
-  width: 1024px;
+  width: 768px;
   margin: auto;
   margin-top: 6px;
   background: #4458D6;
@@ -59,16 +59,17 @@ a {
 }
 
 .main-footer-page {
-  width: 1024px;
+  width: 768px;
   margin: auto;
   background: #0F25AE;
   opacity: 0.9;
+  margin-bottom: 625px;
   margin-top: -6px;
   z-index: 1;
-  margin-bottom: 900px;
   border: 3px solid black;
   border-top-style: none;
   box-sizing: border-box;
+  border-radius: 1px 1px 40px 40px;
 }
 
 
@@ -113,20 +114,20 @@ nav ul li {
 
 .main-navigation ul li a {
   display: block;
-  padding: 18px 0px;
+  padding: 20px 0px;
   text-decoration: none;
   color: white;
   letter-spacing: 2.5px;
   text-transform: none;
-  font-size: 21px;
+  font-size: 16px;
 }
 
 .link-first {
-  margin-left: 75px;
+  margin-left: 25px;
 } 
 
 .link {
-  margin-left: 45px;
+  margin-left: 25px;
 } 
 
 .main-navigation ul li a:hover {
@@ -154,7 +155,7 @@ nav ul li {
 .index-logo {
   position: absolute;
   top: 0%;
-  left: 3%;
+  left: 0%;
   width: 116px;
   height: 58px;
   padding: 1px 10px;
@@ -187,9 +188,9 @@ nav ul li {
 .switch-lang p {
   text-align: center;
   margin: 0px;
-  padding: 20px 40px;
+  padding: 15px 30px;
   line-height: 1.5;
-  font-size: 32px;
+  font-size: 24px;
   letter-spacing: 1.5px;
 }
 
@@ -203,14 +204,14 @@ nav ul li {
 }
 
 .eng-switch {
-  margin: 445px 25px 0px 0px; 
+  margin: 345px 15px 0px 0px; 
   border-bottom: 8px solid white;
   border-right: 4px solid white;
 }
 
 .rus-switch {
   position: relative; 
-  margin: 340px 25px 0px 0px;
+  margin: 260px 50px 0px 0px;
   left: 160px;
   border-bottom: 8px solid white;
   border-right: 4px solid white;
@@ -231,7 +232,7 @@ nav ul li {
 /*ОСНОВНАЯ ЧАСТЬ*/
 
 .image-1 {
-  height: 552px;
+  height: 432px;
   width: 100%;
   background: #66CCFF url("../img/background-games.jpg");
   margin-top: 60px;
@@ -242,11 +243,11 @@ nav ul li {
 .white-block {
   background-color: white;
   margin: 20px;
-  padding: 15px;
+  padding: 5px;
   border-radius: 20px;
   background-repeat: space;
   background-position: 50% 100%;
-  background-size: 125%;
+  background-size: 150%;
 }
 
 .background-image-1 {
@@ -272,6 +273,7 @@ nav ul li {
   text-transform: none;
   text-align: justify;
   text-indent: 15px;
+  padding: 0px 10px;
 }
 
 .white-block ul li {
@@ -286,14 +288,14 @@ nav ul li {
 
 .img-2 {
   float: left;
-  margin-left: 4px;
+  margin-left: 5px;
   border-radius: 10px;
   margin-bottom: 50px;
 }
 
 .img-3 {
   float: left;
-  margin-left: 4px;
+  margin-left: 5px;
   border-radius: 10px;
   margin-bottom: 50px;
 }
@@ -356,7 +358,7 @@ hr::after {
 
 .footer-visit {
   float: left;
-  margin: 50px 0px 50px 140px;
+  margin: 45px 0px 0px 70px;
 }
 
 .footer-visit h2 {
@@ -368,7 +370,7 @@ hr::after {
 
 .footer-social {
   float: left;
-  margin: 36px 0px 0px 93px;
+  margin: 25px 0px 20px 71px;
 }
 
 .social-btn-twit {
@@ -384,7 +386,7 @@ hr::after {
   width: 33px;
   height: 34px;
   margin-left: 6px;
-  padding: 19px 5px 5px 20px;
+  padding: 22px 6px 2px 19px;
   background: #051471;
 }
 
@@ -422,7 +424,7 @@ hr::after {
 
 .academy-link {
   float: left;
-  margin: 46px 0px 0px 140px;
+  margin: 15px 0px 0px 70px;
 }
 
 .footer-copyright-text {
@@ -438,7 +440,7 @@ hr::after {
 .footer-copyright-icon {
   float: left;
   margin-left: 8px;
-  margin-top: -8px;
+  margin-top: -4px;
 }
 
 .footer-copyright-icon a {
@@ -488,7 +490,7 @@ hr::after {
   margin: 0;
   width: 85%;
   min-width: 320px;
-  max-width: 1000px;
+  max-width: 720px;
 /* фиксированное позиционирование, окно стабильно при прокрутке */
   position: fixed;
   padding: 15px;
