--- a/css/style-contacts.css
+++ b/css/style-contacts.css
@@ -2,14 +2,13 @@
 
 body {
   min-width: 768px;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.25;
   font-family: "PT Sans", "Arial", sans-serif;
   font-weight: 400;
   text-transform: uppercase;
   color: black;
   background-color: #051471;
-  zoom: 75%;
   background-image: url("../img/nature.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -17,26 +16,18 @@ body {
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 700;
-  letter-spacing: 1.1px;
-}
-
-h3{
-  text-transform: none;
-  font-size: 24px;
-  letter-spacing: 1.1px;
 }
 
 a {
   font-weight: 900;
 }
-
 
 
 /*ОСНОВА*/
@@ -50,13 +41,13 @@ a {
 .main-header {
   position: relative;
   z-index: 10;
-  width: 1024px;
+  width: 768px;
   margin: auto;
   background: #0F25AE;
 }
 
 .container-page {
-  width: 1024px;
+  width: 768px;
   margin: auto;
   margin-top: 6px;
   background: #4458D6;
@@ -67,16 +58,17 @@ a {
 }
 
 .main-footer-page {
-  width: 1024px;
+  width: 768px;
   margin: auto;
   background: #0F25AE;
   opacity: 0.9;
+  margin-bottom: 625px;
   margin-top: -6px;
   z-index: 1;
-  margin-bottom: 900px;
   border: 3px solid black;
   border-top-style: none;
   box-sizing: border-box;
+  border-radius: 1px 1px 40px 40px;
 }
 
 
@@ -121,20 +113,20 @@ nav ul li {
 
 .main-navigation ul li a {
   display: block;
-  padding: 18px 0px;
+  padding: 20px 0px;
   text-decoration: none;
   color: white;
   letter-spacing: 2.5px;
   text-transform: none;
-  font-size: 21px;
+  font-size: 16px;
 }
 
 .link-first {
-  margin-left: 75px;
+  margin-left: 25px;
 } 
 
 .link {
-  margin-left: 45px;
+  margin-left: 25px;
 } 
 
 .main-navigation ul li a:hover {
@@ -162,7 +154,7 @@ nav ul li {
 .index-logo {
   position: absolute;
   top: 0%;
-  left: 3%;
+  left: 0%;
   width: 116px;
   height: 58px;
   padding: 1px 10px;
@@ -224,7 +216,7 @@ nav ul li {
 /*ОСНОВНАЯ ЧАСТЬ*/
 
 .image-1 {
-  height: 575px;
+  height: 432px;
   width: 100%;
   background: #66CCFF url("../img/background-contacts.jpg");
   margin-top: 60px;
@@ -248,9 +240,9 @@ nav ul li {
 .switch-lang p {
   text-align: center;
   margin: 0px;
-  padding: 20px 40px;
+  padding: 15px 30px;
   line-height: 1.5;
-  font-size: 32px;
+  font-size: 24px;
   letter-spacing: 1.5px;
 }
 
@@ -264,14 +256,14 @@ nav ul li {
 }
 
 .eng-switch {
-  margin: 465px 25px 0px 0px; 
+  margin: 345px 15px 0px 0px; 
   border-bottom: 8px solid white;
   border-right: 4px solid white;
 }
 
 .rus-switch {
   position: relative; 
-  margin: 360px 25px 0px 0px;
+  margin: 260px 50px 0px 0px;
   left: 160px;
   border-bottom: 8px solid white;
   border-right: 4px solid white;
@@ -319,7 +311,7 @@ hr::after {
 
 .footer-visit {
   float: left;
-  margin: 50px 0px 50px 140px;
+  margin: 45px 0px 0px 70px;
 }
 
 .footer-visit h2 {
@@ -331,7 +323,7 @@ hr::after {
 
 .footer-social {
   float: left;
-  margin: 36px 0px 0px 93px;
+  margin: 25px 0px 20px 71px;
 }
 
 .social-btn-twit {
@@ -347,7 +339,7 @@ hr::after {
   width: 33px;
   height: 34px;
   margin-left: 6px;
-  padding: 19px 5px 5px 20px;
+  padding: 22px 6px 2px 19px;
   background: #051471;
 }
 
@@ -385,7 +377,7 @@ hr::after {
 
 .academy-link {
   float: left;
-  margin: 46px 0px 0px 140px;
+  margin: 15px 0px 0px 70px;
 }
 
 .footer-copyright-text {
@@ -401,7 +393,7 @@ hr::after {
 .footer-copyright-icon {
   float: left;
   margin-left: 8px;
-  margin-top: -8px;
+  margin-top: -4px;
 }
 
 .footer-copyright-icon a {
@@ -418,8 +410,6 @@ hr::after {
 .footer-copyright-icon a:active {
   color: #bdbbbc;
 }
-
-
 
 /* ЧЕСТНО СПИЖЖЕННЫЙ КОД ДЛЯ ПОПАПОВ ФОТОК */
 /* Базовые стили слоя затемнения и модального окна  */
