--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,11 @@ nav ul li {
   margin-bottom: 20px;
 }
 
+.block-11 {
+  display: block;
+  margin-bottom: 20px;
+}
+
 /*РАЗДЕЛИТЕЛЬНАЯ ПОЛОСКА*/
 
 hr {
