--- a/css/style-eng.css
+++ b/css/style-eng.css
@@ -56,6 +56,9 @@ a {
   border-top-style: none;
   border-bottom-style: none;
   box-sizing: border-box;
+  background-image: url("../img/2222.jpg");
+  background-repeat: repeat;
+  background-size: auto;
 }
 
 .main-footer-page {
@@ -241,11 +244,13 @@ nav ul li {
 }
 
 .block-2 {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px 15px 30px 15px;
+  padding: 10px 5px;
   color: white;
   text-transform: none;
   text-indent: 15px;
+  background-color: #0F25AE;
+  border-radius: 10px;
 }
 
 /*Красная шапочка*/
@@ -445,6 +450,11 @@ nav ul li {
 }
 
 .block-10 {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.block-11 {
   display: block;
   margin-bottom: 20px;
 }
