--- a/css/style-team-eng.css
+++ b/css/style-team-eng.css
@@ -123,11 +123,11 @@ nav ul li {
 }
 
 .link-first {
-  margin-left: 45px;
+  margin-left: 25px;
 } 
 
 .link {
-  margin-left: 45px;
+  margin-left: 25px;
 } 
 
 .main-navigation ul li a:hover {
@@ -270,13 +270,13 @@ nav ul li {
   width: 500px;
   float: right;
   text-transform: none;
-  padding: 0px 40px;
   box-sizing: border-box;
 }
 
 .text-2 {
   width: 500px;
   float: right;
+  text-indent: 10px;
   text-transform: none;
   padding: 0px 10px;
 }
