--- a/css/style-team.css
+++ b/css/style-team.css
@@ -270,13 +270,13 @@ nav ul li {
   width: 500px;
   float: right;
   text-transform: none;
-  padding: 0px 40px;
   box-sizing: border-box;
 }
 
 .text-2 {
   width: 500px;
   float: right;
+  text-indent: 10px;
   text-transform: none;
   padding: 0px 10px;
 }
