--- a/css/style-bootstrap.css
+++ b/css/style-bootstrap.css
@@ -10,7 +10,7 @@ body {
   background-color: #00472E;
   background-image: url("../img/nature.jpg");
   background-repeat: no-repeat;
-  background-size: 115%;
+  background-size: cover;
   background-attachment: fixed;
 }
 
@@ -137,6 +137,7 @@ a {
   opacity: 0.9;
   margin-bottom: 50px;
   margin-top: -6px;
+  padding: 10px 0px 0px 0px;
   z-index: 1;
   border: 3px solid black;
   border-top-style: none;
@@ -168,9 +169,9 @@ a {
 .switch-lang p {
   text-align: center;
   margin: 0px;
-  padding: 15px 30px;
+  padding: 25px 50px;
   line-height: 1.5;
-  font-size: 24px;
+  font-size: 36px;
   letter-spacing: 1.5px;
 }
 
@@ -184,21 +185,21 @@ a {
 }
 
 .eng-switch {
-  margin: -85px 10px 0px 0px; 
+  margin: -130px 15px 0px 0px; 
   border-bottom: 8px solid white;
   border-right: 4px solid white;
 }
 
 .rus-switch {
   position: relative; 
-  margin: -170px 170px 0px 0px;
+  margin: -260px 175px 0px 0px;
   left: 160px;
   border-bottom: 8px solid white;
   border-right: 4px solid white;
 }
 
 .switch-activated {
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 
 /*РАЗДЕЛИТЕЛЬНАЯ ПОЛОСКА*/
@@ -218,7 +219,7 @@ hr::after {
   position: relative;
   top: -0.7em;
   font-size: 1.5em;
-  z-index: 1;
+  z-index: 10;
   padding: 0px 0.25em;
   background: rgb(107, 122, 214);
 }
@@ -300,9 +301,8 @@ hr::after {
 
 .sort-column-1-link { 
   display: inline-block;
-  width: 140px;
   margin: 15px 10px;
-  padding: 15px 30px;
+  padding: 30px 0px;
   text-decoration: none;
   color: #fff;
   background-color: #051471;
@@ -315,7 +315,7 @@ hr::after {
   margin: 0px;
   padding: 0px;
   line-height: 1.5;
-  font-size: 13px;
+  font-size: 21px;
 }
 
 a {
@@ -335,10 +335,8 @@ a {
 
 .steam-btn {
   display: inline-block;
-  position: relative;
-  top: -9px;
   margin: 15px 10px;
-  padding: 16px 30px;
+  padding: 33px 0px;
   text-decoration: none;
   color: #fff;
   background-color: #051471;
@@ -442,34 +440,34 @@ a {
 /*СОЦИАЛЬНЫЕ КНОПКИ*/
 
 .footer-social {
-  margin: 15px auto;
+  margin-top: 15px;
   display: inline-block;
   width: 220px;
 }
 
 .social-btn-twit {
   float: left;
-  padding: 18px 15px 15px 18px;
+  padding: 17px 16px 16px 17px;
   background: #051471;
 }
 
 .social-btn-vk {
   float: left;
-  margin-left: 2px;
+  margin-left: 3px;
   padding: 17px 15px 17px 15px;
   background: #051471;
 }
 
 .social-btn-fb {
   float: left;
-  margin-left: 2px;
+  margin-left: 3px;
   padding: 15px 20px 16px 20px;
   background: #051471;
 }
 
 .social-btn-youtube {
   float: left;
-  margin-left: 2px;
+  margin-left: 3px;
   padding: 17px 15px 16px 15px;
   background: #051471;
 }
@@ -492,7 +490,7 @@ a {
   display: inline-block;
   width: 120px;
   text-align: center;
-  margin: 25px 0px 15px 0px;
+  margin: 25px 0px 20px 0px;
 }
 
 .footer-copyright-text {
