--- a/css/style-team.css
+++ b/css/style-team.css
@@ -114,12 +114,17 @@ nav ul li {
 
 .main-navigation ul li a {
   display: block;
+  height: 15px;
+  width: 100px;
   padding: 20px 0px;
   text-decoration: none;
   color: white;
   letter-spacing: 2.5px;
   text-transform: none;
   font-size: 16px;
+  text-align: center;
+  border-left: 3px solid #051471;
+  border-right: 3px solid #051471;
 }
 
 .link-first {
@@ -127,7 +132,7 @@ nav ul li {
 } 
 
 .link {
-  margin-left: 25px;
+  margin-left: -6px;
 } 
 
 .main-navigation ul li a:hover {
@@ -148,6 +153,12 @@ nav ul li {
 
 .main-header ul li .main-navigation-active-link:active {
   color: #CCCCCC;
+}
+
+.active-header-link {
+  background-color: #4458D6;
+  border-bottom: 5px solid white;
+  box-sizing: content-box;
 }
 
 /*ЛОГО*/
