--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ a {
 .image-1 {
   height: 432px;
   width: 100%;
-  background: #66CCFF url("../img/background-index.jpg");
+  background: #66CCFF url("../img/background-index-2.jpg");
   margin-top: 60px;
 }
 
