--- a/css/style-eng.css
+++ b/css/style-eng.css
@@ -187,7 +187,7 @@ nav ul li {
 .image-1 {
   height: 432px;
   width: 100%;
-  background: #66CCFF url("../img/background-index.jpg");
+  background: #66CCFF url("../img/background-index-2.jpg");
   margin-top: 60px;
 }
 
