--- a/css/style-eng.css
+++ b/css/style-eng.css
@@ -260,6 +260,12 @@ nav ul li {
   border-radius: 10px;
 }
 
+.vk-group {
+  margin: auto;
+  width: 760px;
+  height: 525px;
+}
+
 /*Красная шапочка*/
 
 .features-1 {
