--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,12 @@ a {
   opacity: 0.5;
 }
 
+.sort-column-1-link-barbarian {
+  margin: 15px 3px 15px 6px;
+  padding: 11px 10px;
+  width: 70px;
+}
+
 /*Кнопка steam*/
 
 .steam-btn {
@@ -363,6 +369,16 @@ a {
 
 .steam-btn:active {
   opacity: 0.5;
+}
+
+.steam-btn-barbarian {
+  margin: 15px 3px 15px 3px;
+  padding: 10px 9px;
+}
+
+.steam-btn-barbarian-google {
+  margin: 15px 6px 15px 3px;
+  padding: 3px 9px;
 }
 
 /*Дикий остров*/
