--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@
 @import "main-form.scss";
 @import "main-nav.scss";
 @import "modal-box.scss";
+@import "page.scss";
 @import "page-header.scss";
 @import "photo-block.scss";
 @import "search.scss";
