--- a/sass/main-nav.scss
+++ b/sass/main-nav.scss
@@ -97,17 +97,40 @@
 
   .main-nav__item a {
     display: block;
-    /*padding: 12px 21px;
-    padding-bottom: 13px;*/
-    @include title-medium;
-    letter-spacing: 0.1px;
-    line-height: 24px;
-    color: $white;
+    width: 170px;
+    padding: 25px 0px;
     text-decoration: none;
-    background-color: $blue;
-    border-bottom: 1.25px solid rgba(0, 0, 0, 0.25);
-    box-shadow: inset 0px 0.5px 0px 0px rgba(255, 255, 255, 0.25);
+    color: white;
+    letter-spacing: 5px;
+    @include title-medium;
+    font-size: 20px;
+    font-weight: 900;
+    text-transform: none;
     text-align: center;
+    box-sizing: border-box;
+    border-left: 3px solid #051471;
+    border-right: 3px solid #051471;
+}
+
+  .main-nav__item--active a {
+    background-color: #4458D6;
+    border-bottom: 5px solid white;
+}
+
+  .main-nav__item-logo a {
+    display: block;
+    width: 160px;
+    height: 80px;
+    padding: 24px 0px;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 2.5px;
+    text-transform: none;
+    font-size: 16px;
+    text-align: center;
+    box-sizing: border-box;
+    border-left: 3px solid #051471;
+    border-right: 3px solid #051471;
 }
 
   .main-nav__item a[href] {
@@ -183,6 +206,10 @@
     display: block;
     background-color: #6a4d38;
   }
+
+  .main-nav__item-logo {
+    display: none;
+  }
 }
 
 @media (min-width: $tablet-widths) {
@@ -195,8 +222,14 @@
 
   .main-nav__wrapper {
     width: 768px;
-    margin: 0 auto;
-    @include clearfix;
+    position: fixed;
+    background: #0F25AE;
+    opacity: 0.85;
+    z-index: 100;
+    border: 3px solid black;
+    border-top-style: none;
+    border-bottom-style: none;
+    box-sizing: border-box;
 }
 
   .main-nav__items {
@@ -219,75 +252,71 @@
 }
 
   .main-nav__item a {
-    padding: 0;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    letter-spacing: 0px;
-    background: none;
-    border: none;
-    color: $black;
-    font-size: 14px;
-}
-
-  .main-nav__item a[href] {
-    &:hover {
-      color: $blue;
-      background-color: $white;
-    }
-    &:active {
-      color: $grey-text-active;
-      background-color: $white;
-    }
-}
-
-  .main-nav__item--active a[href] {
-    color: $active-link;
-    &:hover {
-      color: $active-link-hover;
-      background-color: $white;
-    }
-    &:active {
-      color: $active-link-active;
-      background-color: $white;
-    }
+    display: block;
+    width: 100px;
+    padding: 25px 0px;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 2.5px;
+    @include title-medium;
+    font-size: 16px;
+    font-weight: 900;
+    text-transform: none;
+    text-align: center;
+    box-sizing: border-box;
+    border-left: 3px solid #051471;
+    border-right: 3px solid #051471;
 }
 }
 
 @media (min-width: $desktop-widths) {
   .main-nav__wrapper {
-    width: 100%;
+    width: 1200px;
+    position: fixed;
+    background: #0F25AE;
+    opacity: 0.85;
+    z-index: 100;
+    border: 3px solid black;
+    border-top-style: none;
+    border-bottom-style: none;
+    box-sizing: border-box;
   }
-
-  .main-nav {
-    min-height: 58px; /*временно*/
-}
-
-  .main-nav__items {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
 
   .main-nav__item a {
-    padding-right: 31px;
-    padding-left: 31px;
+    display: block;
+    width: 170px;
+    padding: 25px 0px;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 5px;
+    @include title-medium;
+    font-size: 20px;
+    font-weight: 900;
+    text-transform: none;
+    text-align: center;
+    box-sizing: border-box;
+    border-left: 3px solid #051471;
+    border-right: 3px solid #051471;
 }
 
-  .main-nav__item a[href] {
-    &:hover {
-      color: #000000;
-      background-color: #ffffff;
-    }
+  .main-nav__item--active a {
+    background-color: #4458D6;
+    border-bottom: 5px solid white;
+}
 
-    &:active {
-      color: rgba(0, 0, 0, 0.3);
-      background-color: #ffffff;
-      opacity: 1;
-    }
-  }
-
-  .main-nav__user-items {
+  .main-nav__item-logo a {
+    display: block;
     width: 160px;
-  }
+    height: 80px;
+    padding: 24px 0px;
+    text-decoration: none;
+    color: white;
+    letter-spacing: 2.5px;
+    text-transform: none;
+    font-size: 16px;
+    text-align: center;
+    box-sizing: border-box;
+    border-left: 3px solid #051471;
+    border-right: 3px solid #051471;
+}
 }
